Fix curve change despite 'Use same curve' checked

Before this commit, if you have a preset like Fill_circle
that has "Use the same curve" checkbox checked and you were
clicking on other sensors, the curve would be back to the default
curve (the one that other sensors had) if you switch back and forth
between some sensors (like Pressure -> X-Tilt-> Pressure).

Also before this commit if you have the default uprising curve
and you switched Rotation -> Tilt elevation, the curve would change.

This commit fixes both behaviours (first by adding transferCurve(),
second by switching the line in kis_curve_widget).

This commit also includes two slot functions instead of one function
that were used as a slot for two different signals. It helps with
debugging signals and keeping stuff clear and ordered.

There is one problem left: if you switch Tilt elevation -> Distance
(using the 'hill' curve), the preset is set to modified even though
the curve doesn't change.

BUG:383909
BACKPORT:krita/4.2